[package]
name = "harmonizers"
version = "0.1.0"
authors = ["Gio Palacino <gio@palacino.net>"]
repository = "https://github.com/giocirque/harmonizers"
license = "GPLv3"
description = "A rust implementation of the harmony drawing app with procedural brushes for reMarkable 2."
readme = "README.md"
edition = "2021"
autobins = false

[[bin]]
name = "harmonizers"
path = "src/main.rs"

[dependencies]
clap = "4.0"
downcast-rs = "1.2"
evdev = { git = "https://github.com/emberian/evdev", rev = "fe3d0e9ab098f7e94bc4ab8d876eeba9fc958c6b" } # is 0.11.0-alpha.1 which is https://github.com/emberian/evdev/pull/24 which re-fixes https://github.com/emberian/evdev/pull/23 which solves https://github.com/emberian/evdev/pull/22
fxhash = "0.2"
lazy_static = "1.4.0"
libremarkable = "0.6.1"
rand = "0.8.5"

[profile.release]
debug = true

[dev-dependencies]
cross = "*"
