[package]
name = "harmonizers"
version = "0.1.0"
authors = ["Gio Palacino <gio@palacino.net>"]
repository = "https://github.com/giocirque/harmonizers"
license = "GPLv3"
description = "A rust implementation of the harmony drawing app with procedural brushes for reMarkable 2."
readme = "README.md"
edition = "2021"
autobins = false

[[bin]]
name = "harmonizers"
path = "src/main.rs"

[dependencies]
atomic = "0.5.1"
cgmath = "0.18.0"
clap = "4.0"
downcast-rs = "1.2"
env_logger = "0.9.0"
evdev = { git = "https://github.com/emberian/evdev", rev = "fe3d0e9ab098f7e94bc4ab8d876eeba9fc958c6b" } # is 0.11.0-alpha.1 which is https://github.com/emberian/evdev/pull/24 which re-fixes https://github.com/emberian/evdev/pull/23 which solves https://github.com/emberian/evdev/pull/22
fxhash = "0.2"
image = "*"
lazy_static = "1.4.0"
libc = "0.2.69"
libremarkable = "0.6.1"
log = "0.4.14"
once_cell = "1.9.0"
rand = "0.8.5"
rust-embed = "6.4.1"

[profile.release]
debug = true

[dev-dependencies]
cross = "*"
