[package]
name = "harmonizers"
version = "0.1.0"
authors = ["Gio Palacino <gio@palacino.net>"]
repository = "https://github.com/giocirque/harmonizers"
license = "GPLv3"
description = "A rust implementation of the harmony drawing app with procedural brushes for reMarkable 2."
readme = "README.md"
edition = "2021"
autobins = false

[[bin]]
name = "harmonizers"
path = "src/main.rs"

[dependencies]
atomic = "~0.5"
cgmath = "~0.18"
chrono = "~0.4"
clap = "~4.0"
downcast-rs = "~1.2"
env_logger = "~0.9"
evdev = { git = "https://github.com/emberian/evdev", rev = "fe3d0e9ab098f7e94bc4ab8d876eeba9fc958c6b" } # is 0.11.0-alpha.1 which is https://github.com/emberian/evdev/pull/24 which re-fixes https://github.com/emberian/evdev/pull/23 which solves https://github.com/emberian/evdev/pull/22
fxhash = "~0.2"
lazy_static = "~1.4"
libc = "~0.2"
libremarkable = "~0.6"
log = "~0.4"
once_cell = "~1.16"
rand = "~0.8"
rust-embed = "~6.4"
strum = "~0.24"
strum_macros = "~0.24"

[profile.release]
debug = true

[dev-dependencies]
cross = "~0.2"
